# signal

./: LICENSE  README.md  pyproject.toml
demo/: main.py
src/signal_py/: __init__.py
src/signal_py/core/: __init__.py  computed.py  context.py  effect.py  signal.py
